<resources>
    <string name="app_name">Wallpaper Manager</string>

    <string name="add_image_or_folder">Add image or folder</string>
    <string name="home">Home</string>
    <string name="album">Album</string>
    <string name="apply_changes">Save configurations</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading</string>

    <string name="ok">OK</string>

    <string name="error_generic">Unable to complete action</string>

    <string name="album_error_add">Unable to fetch the album</string>
    <string name="album_error_update">Unable to update album</string>
    <string name="album_error_delete">Unable to delete album</string>

    <string name="album_not_found">Album not found</string>
    <string name="time">Time</string>
    <string name="alarm_details">Alarm details</string>

    <string name="darken_wallpaper">Darken wallpaper</string>
    <string name="alarm">Alarm</string>
    <string name="select_album">Select album</string>
    <string name="empty" />
    <string name="add_alarm">Add alarm</string>
    <string name="settings">Settings</string>
    <string name="shuffle_album">Shuffle album</string>
    <string name="shuffle_album_details">Randomly order the images</string>
    <string name="double_click">Double click</string>
    <string name="double_click_details">Double click to change the image</string>
    <string name="hour_uppercase">Hour</string>
    <string name="minute_uppercase">Minute</string>
    <string name="alarm_error">Not load alarm</string>
    <string name="enable_app_details">Click here to set the app as default</string>

    <string name="current_album">Current album</string>
    <string name="default_album">No album set</string>
    <string name="user_default_album">Current wallpaper</string>
    <string name="basic">Basic</string>
    <string name="alarm_and_time">Alarm and time</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="change_when_lock">Change when lock</string>
    <string name="enter_time">Enter time</string>
    <string name="two_point">:</string>
    <string name="cancel">Cancel</string>
    <string name="help">Help</string>
    <string name="delete_image">Delete</string>
    <string name="add_image">Add image</string>
    <string name="delete">Delete</string>
    <string name="none_image">Normal</string>
    <string name="static_image">Static image</string>

    <string name="progress_value">Loading %d of %d</string>
    <string name="image_added">Image added</string>

    <array name="week_days">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </array>

</resources>