<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_default"
    android:layout_marginVertical="@dimen/margin_minimal"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="@dimen/margin_10"
    app:cardElevation="@dimen/margin_10"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_default">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/TimeAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="06:50" />

        <com.github.angads25.toggle.widget.LabeledSwitch
            android:id="@+id/IsEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_default"
            app:layout_constraintBottom_toBottomOf="@id/TimeAlarm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/TimeAlarm"
            app:on="false"
            app:textOff="@string/empty"
            app:textOn="@string/empty"
            tools:checked="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/container_week_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin_default"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/TimeAlarm"
            tools:listitem="@layout/card_week_day" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_week_day">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/select_album"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/margin_default"
                android:paddingVertical="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/icon_image"
                    app:tint="?attr/colorOnPrimaryContainer" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/AlbumId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:maxLines="2"
                    android:text="@string/select_album"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete_alarm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="?attr/selectableItemBackground"
                android:drawableStart="@drawable/icon_delete_forever"
                android:drawablePadding="@dimen/margin_16"
                android:drawableTint="?attr/colorOnPrimaryContainer"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/margin_default"
                android:paddingVertical="16dp"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>